# yantrium-qt

./: .env.example  .gitignore  CMakeLists.txt  Makefile  TEST_ADDONS.md  Yantrium  build.sh.example  build_flatpak.sh  check_database.sh  org.yantrium.Yantrium.desktop  org.yantrium.Yantrium.filled.yml  org.yantrium.Yantrium.yml  run_catalog_test.sh  test_addons.sh  test_catalogs.qml  test_catalogs.sh  test_catalogs_export.cpp  test_tmdb.py
.github/workflows/: build-flatpak.yml  build-windows.yml
Yantrium_autogen/: deps  mocs_compilation.cpp
Yantrium_autogen/6IR33JEFVF/: moc_mdk_player.cpp.d  moc_player_bridge.cpp.d
Yantrium_autogen/GK43SQADPL/: moc_database_manager.cpp.d
Yantrium_autogen/SCKY6C5PUC/: moc_catalog_preferences_service.cpp.d  moc_configuration.cpp.d  moc_file_export_service.cpp.d  moc_library_service.cpp.d  moc_tmdb_search_service.cpp.d  moc_tmdb_service.cpp.d  moc_trakt_auth_service.cpp.d  moc_trakt_core_service.cpp.d  moc_trakt_scrobble_service.cpp.d  moc_trakt_watchlist_service.cpp.d
Yantrium_autogen/SXA6253PCD/: moc_addon_client.cpp.d  moc_addon_installer.cpp.d  moc_addon_repository.cpp.d
Yantrium_autogen/UVLADIE3JM/: moc_app_controller.cpp.d
cmake/: LinuxConfig.cmake  WindowsConfig.cmake
resources/: qml.qrc  yantrium.rc
resources/assets/fonts/: .gitkeep
resources/assets/icons/: .gitkeep
resources/qml/: AppStyle.qml  Main.qml  MainApp.qml  TestLauncher.qml
resources/qml/components/: AppButton.qml  AppCard.qml  CastCard.qml  ContentCard.qml  ContinueWatchingCard.qml  HeroSection.qml  HorizontalList.qml  NavigationBar.qml  SearchBar.qml  StreamSelectionDialog.qml  VideoOverlay.qml
resources/qml/modules/player/: VideoScreen.qml
resources/qml/screens/: AddonScreen.qml  AddonTestScreen.qml  DetailScreen.qml  HomeScreen.qml  LibraryScreen.qml  SearchScreen.qml  SettingsScreen.qml  VideoPlayerScreen.qml
src/: app_controller.cpp  app_controller.h  main.cpp
src/core/: concepts.h
src/core/database/: addon_dao.cpp  addon_dao.h  catalog_preferences_dao.cpp  catalog_preferences_dao.h  database_manager.cpp  database_manager.h  local_library_dao.cpp  local_library_dao.h  sync_tracking_dao.cpp  sync_tracking_dao.h  trakt_auth_dao.cpp  trakt_auth_dao.h  watch_history_dao.cpp  watch_history_dao.h
src/core/di/: service_registry.cpp  service_registry.h
src/core/errors/: error_types.h  result.h
src/core/models/: stream_info.cpp  stream_info.h  tmdb_models.cpp  tmdb_models.h  trakt_models.cpp  trakt_models.h
src/core/services/: cache_service.cpp  cache_service.h  catalog_preferences_service.cpp  catalog_preferences_service.h  configuration.cpp  configuration.h  error_service.cpp  error_service.h  file_export_service.cpp  file_export_service.h  frontend_data_mapper.cpp  frontend_data_mapper.h  id_parser.cpp  id_parser.h  library_service.cpp  library_service.h  local_library_service.cpp  local_library_service.h  logging_service.cpp  logging_service.h  media_metadata_service.cpp  media_metadata_service.h  navigation_service.cpp  navigation_service.h  omdb_service.cpp  omdb_service.h  screen_manager.cpp  screen_manager.h  stream_service.cpp  stream_service.h  tmdb_api_client.cpp  tmdb_api_client.h  tmdb_data_extractor.cpp  tmdb_data_extractor.h  tmdb_data_mapper.cpp  tmdb_data_mapper.h  tmdb_data_service.cpp  tmdb_data_service.h  tmdb_search_service.cpp  tmdb_search_service.h  (+16 more)
src/core/services/interfaces/: ilibrary_service.h  imedia_metadata_service.h  istream_service.h  itmdb_data_service.h
src/features/addons/logic/: addon_client.cpp  addon_client.h  addon_installer.cpp  addon_installer.h  addon_repository.cpp  addon_repository.h
src/features/addons/models/: addon_config.cpp  addon_config.h  addon_manifest.cpp  addon_manifest.h  catalog_definition.cpp  catalog_definition.h
src/player/: mdk_player.cpp  mdk_player.h  player_bridge.cpp  player_bridge.h
